# tapkee

./: .clang-format  .clang_complete  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTIONS  DEVELOPER  Dockerfile  LICENSE  MIT-LICENSE  Makefile  README.md  application  azure-pipelines.yml  build_nanobind.sh  generate_doc.sh  generate_helix.py  generate_swissroll.py  nanobind.py  pyproject.toml  show.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cmake.yml  codeql.yml  linux.yml  macos.yml  nanobind.yml  r-package.yml  release.yml  wheels.yml  windows.yml
doc/: Doxyfile  lisitsyn12a.bib
doc/methods/: dm.markdown  fa.markdown  hlle.markdown  isomap.markdown  kpca.markdown  la.markdown  le.markdown  lle.markdown  lltsa.markdown  lpp.markdown  ltsa.markdown  mds.markdown  npe.markdown  pca.markdown  rp.markdown  spe.markdown  tsne.markdown
doc/template/: mathjax.html  method_template.html
examples/: CMakeLists.txt  borsch  go.py  nanobind.py  utils.py
examples/cbcl/: cbcl.md  cbcl.py
examples/faces/: faces.md  faces.py
examples/langs/: langs.md  lle.py  ltsa.m
examples/minimal/: CMakeLists.txt  minimal.cpp  minimal.md
examples/mnist/: mnist.md  mnist.py
examples/nanobind/: nanobind.md  nanobind_example.py
examples/precomputed/: CMakeLists.txt  precomputed.cpp  precomputed.md
examples/promoters/: promoters.md  promoters.py
examples/rna/: CMakeLists.txt  rna.cpp  rna.md
examples/words/: words.md  words.py
include/: tapkee.hpp  tapkee_chain_interface.hpp  tapkee_defines.hpp  tapkee_embed.hpp  tapkee_exceptions.hpp  tapkee_methods.hpp
include/callback/: callback_traits.hpp  dummy_callbacks.hpp  eigen_callbacks.hpp  precomputed_callbacks.hpp
include/callbacks/: dummy_callbacks.hpp  eigen_callbacks.hpp
include/defines/: keywords.hpp  synonyms.hpp
include/formatting/: formatting.hpp  implementations.hpp  wrappers.hpp
include/neighbors/: covertree.hpp  covertree_point.hpp  neighbors.hpp  vptree.hpp
include/parameters/: parameters.hpp  policy.hpp  value_keeper.hpp
include/routines/: diffusion_maps.hpp  eigen_embedding.hpp  eigendecomposition.hpp  generalized_eigen_embedding.hpp  generalized_eigendecomposition.hpp  isomap.hpp  laplacian_eigenmaps.hpp  locally_linear.hpp  matrix_operations.hpp  multidimensional_scaling.hpp  pca.hpp  random_projection.hpp  spe.hpp
include/stichwort/: exceptions.hpp  keywords.hpp  parameter.hpp  policy.hpp  value_keeper.hpp
include/tapkee/: chain_interface.hpp  defines.hpp  embed.hpp  exceptions.hpp  methods.hpp  predicates.hpp  projection.hpp  tapkee.hpp
include/tapkee/callbacks/: dummy_callbacks.hpp  eigen_callbacks.hpp  neighbor_callbacks.hpp  pimpl_callbacks.hpp  precomputed_callbacks.hpp  virtual_callbacks.hpp
include/tapkee/defines/: eigen3.hpp  keywords.hpp  method_names.hpp  methods.hpp  random.hpp  stdtypes.hpp  synonyms.hpp  types.hpp
include/tapkee/methods/: all.hpp  base.hpp  diffusion_map.hpp  factor_analysis.hpp  hessian_locally_linear_embedding.hpp  isomap.hpp  kernel_local_tangent_space_alignment.hpp  kernel_locally_linear_embedding.hpp  kernel_pca.hpp  landmark_isomap.hpp  landmark_multidimensional_scaling.hpp  laplacian_eigenmaps.hpp  linear_local_tangent_space_alignment.hpp  locality_preserving_projections.hpp  pca.hpp  (+7 more)
include/utils/: any.hpp  arpack_wrapper.hpp  callback_matrix.hpp  fibonacci_heap.hpp  naming.hpp  parameters.hpp  policy.hpp  reservable_priority_queue.hpp  time.hpp  value_keeper.hpp
src/: .main.cpp.swp  defines.hpp  edrt.hpp  ezoptionparser.hpp  main.cpp  tapkee.hpp  tapkee_highlevel_methods.hpp  util.hpp
src/R/: tapkee_eigen_rcpp.h  tapkee_embed.cpp
src/callbacks/: eigen_callbacks.hpp  eigen_matrix_callbacks.hpp  precomputed_callbacks.hpp  traits.hpp
src/cli/: .main.cpp.swp  ezoptionparser.hpp  main.cpp  util.hpp
src/cmake/: FindArpack.cmake  FindArpack.cmake~  FindFeast.cmake~  FindGoogleMockMinimal.cmake  FindOpenCL.cmake  Findfmt.cmake
src/edrt/: .libedrt_methods.cpp.swp  libedrt.cpp  libedrt.hpp  libedrt_defines.hpp  libedrt_embedding.cpp  libedrt_embedding.hpp  libedrt_methods.cpp  libedrt_methods.hpp  libedrt_neighbors.cpp  libedrt_neighbors.hpp
src/methods/: diffusion_maps.hpp  eigen_embedding.hpp  eigen_embedding.hpp~  generalized_eigen_embedding.hpp  isomap.hpp  kernel_pca.hpp  laplacian_eigenmaps.hpp  local_weights.hpp  local_weights.hpp~  locally_linear.hpp  matrix_operations.hpp  multidimensional_scaling.hpp  pca.hpp  spe.hpp
src/neighbor/: CoverTree.hpp~
src/neighbors/: CoverTree.hpp  JLCoverTree.hpp  covertree.hpp  covertree_point.hpp  jl_covertree_point.hpp  neighbors.hpp
src/python/: nanobind_extension.cpp  tapkee.c  tapkee.cpp  tapkee.pyx  tapkee_module.cpp  tapkee_module.hpp
src/utils/: any.hpp  arpack_wrapper.hpp  fibonacci_heap.cpp  fibonacci_heap.hpp  logging.hpp  matrix.hpp  time.hpp
tapkee/: tapkee.hpp  tapkee_defines.hpp  tapkee_exceptions.hpp  tapkee_methods.hpp  tapkee_projection.hpp
tapkee/callbacks/: eigen_callbacks.hpp  neighbor_callback.hpp  pimpl_callbacks.hpp  precomputed_callbacks.hpp  traits.hpp
tapkee/neighbors/: connected.hpp  covertree.hpp  covertree_point.hpp  neighbors.hpp
tapkee/routines/: .matrix_operations.hpp.swp  diffusion_maps.hpp  eigen_embedding.hpp  generalized_eigen_embedding.hpp  isomap.hpp  laplacian_eigenmaps.hpp  locally_linear.hpp  matrix_operations.hpp  matrix_projection.hpp  methods_traits.hpp  multidimensional_scaling.hpp  mvu.hpp  pca.hpp  random_projection.hpp  sammon.hpp  spe.hpp
tapkee/utils/: any.hpp  arpack_wrapper.hpp  logging.hpp  time.hpp
test/: generate_helix.py  generate_scurve.py  generate_swissroll.py  ltsa.py  show_swissroll.py  simple.cpp  test_all  test_nanobind_extension.py  valgrind_run_all.sh  valgrind_tests_transformer.xslt
test/gtest/: callbacks.hpp  eigenembedding.cpp  interface.cpp  methods.cpp  neighbors.cpp
test/unit/: .eigenembedding.cpp.swo  callbacks.hpp  data.hpp  eigendecomposition.cpp  interface.cpp  methods.cpp  neighbors.cpp  projecting.cpp
(+36 files in other folders)
